@startuml

title __MONSTERS's Class Diagram__\n

  namespace es.ull.patrones {
    namespace es.ull.patrones.prototype.monsters {
      class es.ull.patrones.prototype.monsters.BlueMonster {
          + BlueMonster()
          + clone()
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.prototype.monsters {
      class es.ull.patrones.prototype.monsters.GreenMonster {
          + GreenMonster()
          + clone()
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.prototype.monsters {
      abstract class es.ull.patrones.prototype.monsters.Monster {
          - name : String
          {abstract} + clone()
          + getName()
          + setName()
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.prototype.monsters {
      interface es.ull.patrones.prototype.monsters.MonsterPrototype {
          {abstract} + clone()
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.prototype.monsters {
      class es.ull.patrones.prototype.monsters.OrangeMonster {
          + OrangeMonster()
          + clone()
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.prototype.monsters {
      class es.ull.patrones.prototype.monsters.PurpleMonster {
          + PurpleMonster()
          + clone()
      }
    }
  }
  

  es.ull.patrones.prototype.monsters.BlueMonster -up-|> es.ull.patrones.prototype.monsters.Monster
  es.ull.patrones.prototype.monsters.GreenMonster -up-|> es.ull.patrones.prototype.monsters.Monster
  es.ull.patrones.prototype.monsters.Monster .up.|> es.ull.patrones.prototype.monsters.MonsterPrototype
  es.ull.patrones.prototype.monsters.OrangeMonster -up-|> es.ull.patrones.prototype.monsters.Monster
  es.ull.patrones.prototype.monsters.PurpleMonster -up-|> es.ull.patrones.prototype.monsters.Monster


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
